# ebpf-profiler

./: .gitignore  CMakeLists.txt  Readme.md  deps.sh  run_demo.sh
kernel/: off_cpu.bpf.c  on_cpu.bpf.c  profiler_common.h  uprobe.bpf.c  vmlinux.h
src/: derivation.cpp  derivation.hpp  main.cpp  stack_resolver.hpp  types.cpp  types.hpp
test/: .ninja_deps  .ninja_log  build.ninja  demo_app  demo_app.cpp  demo_cpu.cpp  demo_io_lock.cpp  demo_sleep.cpp  mysql_workload.sh  test_app  test_app.cpp
test/www/: index.html
www/: index.html
